--- a/styles.css
+++ b/styles.css
@@ -436,6 +436,7 @@ nav ul li a:hover {
 .testimonial-content {
     display: flex;
     justify-content: space-between;
+    margin-top: -5rem; 
 }
 
 .testimonial-graphics {
@@ -476,7 +477,7 @@ nav ul li a:hover {
 }
 
 .user5 {
-    top: 45%;
+    top: 40%;
     left: 30%;
     width:60%;
 }
@@ -493,28 +494,33 @@ nav ul li a:hover {
     width:5%;
 }
 
+.colour6{
+    margin-top: 30%;
+    margin-left: 2%;
+}
+
 .testimonial-text {
     width: 50%;
-    top:70%;
+    top:10%;
     left: 50%;
 }
 
 .testimonial h2 {
-    color: #ff5e57;
     font-size: 1.2rem;
     margin-bottom: 10px;
-    text-align: center; 
+     
 }
 
 
 .testimonial h1 {
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     margin-bottom: 30px;
-    left: 100%;
+    
 }
 
 .testimonial h3 {
     font-size: 1.5rem;
+    margin-left: 7%;
 }
 
 blockquote {
@@ -596,7 +602,7 @@ footer {
 }
 
 .box {
-    margin: 0;
+    margin: 10%;
     font-family: Arial, sans-serif;
     background: black;
     color: white;
@@ -606,19 +612,19 @@ footer {
     align-items: center;
     justify-content: space-between;
     padding: 50px;
-    height: 100vh;
+    height: 80vh;
     box-sizing: border-box;
 }
 .left {
     max-width: 50%;
 }
 .left h1 {
-    font-size: 3rem;
+    font-size: 2.5rem;
     margin: 0 0 20px;
 }
 .left p {
     margin: 0 0 30px;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 .left .download-btn {
     display: inline-block;
@@ -630,6 +636,11 @@ footer {
     text-decoration: none;
     transition: background 0.3s ease;
 }
+
+.apple{
+    width: 10%;
+}
+
 .left .download-btn:hover {
     background: #ddd;
 }
@@ -646,6 +657,39 @@ footer {
 .right img:hover {
     transform: rotate(0deg);
 }
+
+.right img {
+    position: absolute;
+    width: 350px;
+    height: auto;
+    border: none; 
+    box-shadow: none;
+    margin-top: -200px;
+    margin-left: -100px;
+    transform: rotate(25deg);
+    transition: transform 0.3s ease;
+}
+
+ .right .phone4{
+    top: 100px;
+    left: 100px;
+    transform: rotate(-5deg);
+    z-index: 2; 
+}
+
+.right .phone5{
+    top: 100px; 
+    left: 170px;
+    transform: rotate(-1deg);
+    z-index: 1; 
+}
+
+.right .phone6{
+    top: 160px; 
+    left: 20px;
+    transform: rotate(-1deg);
+}
+
 .stars {
     position: absolute;
     top: 0;
